feat(generator): Add chunk transform and update dependencies
- Introduced a new chunk transform for processing DocumentNodes in the KnowledgeGraph, enabling document splitting.
- Updated package.json to include @ai-sdk-eval/rag as a dependency.
- Modified pnpm-lock.yaml to reflect the new dependency linkage.

--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -21,6 +21,7 @@
     "tsdown": "latest"
   },
   "dependencies": {
-    "ai": "^5.0.60"
+    "ai": "^5.0.60",
+    "@ai-sdk-eval/rag": "workspace:*"
   }
 }
