feat(generator): Enhance generator package with new transforms and dependencies
- Added a new `tap` transform for inspecting intermediate results in the KnowledgeGraph pipeline.
- Updated `index.ts` to export new transform functionalities.
- Included `@ai-sdk/openai` and `@types/node` as devDependencies in package.json.
- Modified pnpm-lock.yaml to reflect the new dependencies and their versions.

--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -18,10 +18,12 @@
     "dev": "tsdown --watch"
   },
   "devDependencies": {
+    "@ai-sdk/openai": "^2.0.44",
+    "@types/node": "^24.7.0",
+    "ai": "^5.0.60",
     "tsdown": "latest"
   },
   "dependencies": {
-    "ai": "^5.0.60",
     "@ai-sdk-eval/rag": "workspace:*"
   }
 }
