--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -21,6 +21,7 @@
     "@ai-sdk/openai": "^2.0.44",
     "@types/node": "^24.7.0",
     "ai": "^5.0.60",
+    "dotenv": "^17.2.3",
     "tsdown": "latest"
   },
   "dependencies": {
