feat(generator): Add Zod validation and enhance node structure
- Introduced Zod schemas for validating GraphNode types, including DocumentNode, ChunkNode, and EntityNode.
- Updated the GraphNode class to support 'entity' type and modified the constructor accordingly.
- Enhanced the KnowledgeGraph class to handle different node types during JSON parsing.
- Added 'zod' as a new dependency in package.json and updated pnpm-lock.yaml to reflect this change.

--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -25,6 +25,7 @@
     "tsdown": "latest"
   },
   "dependencies": {
-    "@ai-sdk-eval/rag": "workspace:*"
+    "@ai-sdk-eval/rag": "workspace:*",
+    "zod": "^4.1.12"
   }
 }
