--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -25,6 +25,7 @@
     "tsdown": "latest"
   },
   "dependencies": {
+    "@ai-sdk-eval/core": "workspace:*",
     "@ai-sdk-eval/rag": "workspace:*",
     "zod": "^4.1.12"
   }
