feat(generator): Implement scenario generation utilities and types
- Added `generateScenarios` function to create scenarios based on a knowledge graph and personas.
- Introduced `ScenarioBuilder`, `SingleHopScenarioBuilder`, and `MultiHopScenarioBuilder` classes for flexible scenario generation.
- Defined `Scenario` interface and related types for better type safety.
- Updated `index.ts` to export new scenario-related functionalities.
- Modified `example.ts` to demonstrate the usage of the new scenario generation features.

--- a/packages/generator/tsconfig.json
+++ b/packages/generator/tsconfig.json
@@ -7,7 +7,7 @@
     "tsBuildInfoFile": "./dist/.tsbuildinfo",
     "types": ["node"]
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "example.ts"],
   "exclude": ["node_modules", "dist", "**/*.test.ts", "**/*.spec.ts"],
   "references": [
     {
