feat(docs): Enhance documentation structure and add feedback components

--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ai-sdk-eval/generator",
+  "name": "@open-evals/generator",
   "version": "0.0.0",
   "description": "",
   "type": "module",
