--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@icons-pack/react-simple-icons": "^13.8.0",
     "class-variance-authority": "^0.7.1",
     "fumadocs-core": "15.8.5",
     "fumadocs-mdx": "12.0.3",
