--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -17,6 +17,7 @@
     "fumadocs-ui": "15.8.5",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
+    "octokit": "^5.0.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "tailwind-merge": "^3.3.1"
