feat(core): Add publish script to package.json for streamlined deployment

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -19,7 +19,8 @@
     "dev": "tsdown --watch",
     "test": "vitest run",
     "test:watch": "vitest",
-    "test:coverage": "vitest run --coverage"
+    "test:coverage": "vitest run --coverage",
+    "publish": "pnpm build && pnpm publish"
   },
   "devDependencies": {
     "tsdown": "latest",
