feat(core): Update package.json to include a description for the core package

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,8 +1,7 @@
 {
   "name": "@open-evals/core",
   "version": "0.0.0",
-  "private": true,
-  "description": "",
+  "description": "Core package for Open Evals",
   "type": "module",
   "files": [
     "dist"
