--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -2,7 +2,6 @@
   "name": "@open-evals/core",
   "version": "0.0.0",
   "description": "Core package for Open Evals",
-  "access": "public",
   "author": {
     "name": "Can Temizyurek",
     "email": "cantemizyurek@gmail.com"
@@ -12,6 +11,7 @@
     "type": "git",
     "url": "https://github.com/cantemizyurek/open-evals"
   },
+  "private": false,
   "type": "module",
   "files": [
     "dist"
