--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -23,6 +23,9 @@
     ".": "./dist/index.js",
     "./package.json": "./package.json"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "build": "tsdown",
     "dev": "tsdown --watch",
