--- a/packages/metrics/package.json
+++ b/packages/metrics/package.json
@@ -1,7 +1,20 @@
 {
   "name": "@open-evals/metrics",
   "version": "0.0.0",
-  "description": "Metrics for evaluating AI SDKs",
+  "description": "Metrics for Open Evals",
+  "author": {
+    "name": "Can Temizyurek",
+    "email": "cantemizyurek@gmail.com"
+  },
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/cantemizyurek/open-evals"
+  },
+  "private": false,
+  "publishConfig": {
+    "access": "public"
+  },
   "type": "module",
   "files": [
     "dist"
@@ -17,17 +30,19 @@
     "build": "tsdown",
     "dev": "tsdown --watch",
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "publish": "pnpm build && pnpm publish"
   },
   "dependencies": {
-    "@open-evals/core": "workspace:*",
+    "@open-evals/core": "^0.0.0",
     "ai": "^5.0.60",
     "zod": "^4.1.12"
   },
   "devDependencies": {
+    "@vitest/coverage-v8": "^2.0.0",
     "tsdown": "^0.15.6",
     "typescript": "^5.0.0",
-    "vitest": "^2.0.0",
-    "@vitest/coverage-v8": "^2.0.0"
+    "vitest": "^2.0.0"
   }
 }
