--- a/packages/metrics/package.json
+++ b/packages/metrics/package.json
@@ -32,7 +32,7 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
-    "publish": "pnpm build && pnpm publish"
+    "prepublishOnly": "pnpm build"
   },
   "dependencies": {
     "@open-evals/core": "workspace:*",
