--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -1,7 +1,20 @@
 {
   "name": "@open-evals/generator",
   "version": "0.1.0",
-  "description": "",
+  "description": "Generator for Open Evals",
+  "author": {
+    "name": "Can Temizyurek",
+    "email": "cantemizyurek@gmail.com"
+  },
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/cantemizyurek/open-evals"
+  },
+  "private": false,
+  "publishConfig": {
+    "access": "public"
+  },
   "type": "module",
   "files": [
     "dist"
