chore(generator): Add prepublishOnly script to package.json for build process

--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -28,7 +28,8 @@
   },
   "scripts": {
     "build": "tsdown",
-    "dev": "tsdown --watch"
+    "dev": "tsdown --watch",
+    "prepublishOnly": "pnpm build"
   },
   "devDependencies": {
     "@types/node": "^24.7.0",
