--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "ai-sdk-eval",
   "version": "0.0.0",
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "packageManager": "pnpm@10.8.1"
+  "private": true,
+  "packageManager": "pnpm@10.8.1",
+  "workspaces": [
+    "packages/*",
+    "apps/*"
+  ]
 }
