--- a/packages/rag/package.json
+++ b/packages/rag/package.json
@@ -35,6 +35,8 @@
     "prepublishOnly": "pnpm build"
   },
   "devDependencies": {
-    "tsdown": "latest"
+    "@vitest/ui": "^3.2.4",
+    "tsdown": "latest",
+    "vitest": "^3.2.4"
   }
 }
