--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -10,17 +10,29 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@ai-sdk/openai-compatible": "^1.0.19",
+    "@ai-sdk/react": "^2.0.59",
     "@icons-pack/react-simple-icons": "^13.8.0",
+    "@radix-ui/react-presence": "^1.1.5",
+    "ai": "^5.0.59",
     "class-variance-authority": "^0.7.1",
     "fumadocs-core": "15.8.5",
     "fumadocs-mdx": "12.0.3",
     "fumadocs-ui": "15.8.5",
+    "hast-util-to-jsx-runtime": "^2.3.6",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
     "octokit": "^5.0.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "tailwind-merge": "^3.3.1"
+    "react-remove-scroll": "^2.7.1",
+    "remark": "^15.0.1",
+    "remark-gfm": "^4.0.1",
+    "remark-rehype": "^11.1.2",
+    "tailwind-merge": "^3.3.1",
+    "unist-util-visit": "^5.0.0",
+    "zod": "^4.1.11",
+    "@open-evals/doc-assistant": "workspace:*"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
