--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -13,7 +13,9 @@
     "@ai-sdk/openai-compatible": "^1.0.19",
     "@ai-sdk/react": "^2.0.59",
     "@icons-pack/react-simple-icons": "^13.8.0",
+    "@open-evals/doc-assistant": "workspace:*",
     "@radix-ui/react-presence": "^1.1.5",
+    "@vercel/analytics": "^1.5.0",
     "ai": "^5.0.59",
     "class-variance-authority": "^0.7.1",
     "fumadocs-core": "15.8.5",
@@ -31,8 +33,7 @@
     "remark-rehype": "^11.1.2",
     "tailwind-merge": "^3.3.1",
     "unist-util-visit": "^5.0.0",
-    "zod": "^4.1.11",
-    "@open-evals/doc-assistant": "workspace:*"
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
